aws-cluster-setup/ingress/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-aws-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  #ingressClassName: alb
  rules:
    - http:
        paths:
#          - pathType: Prefix
#            path: /()(.*)  # Root path
#            backend:
#              service:
#                name: my-react-post-app-service
#                port:
#                  number: 80
          - pathType: Prefix
            path: /api/posts/
            backend:
              service:
                name: post-service
                port:
                  number: 8081
          - pathType: Prefix
            path: /api/content/
            backend:
              service:
                name: content-service
                port:
                  number: 8082
          - pathType: Prefix
            path: /api/users/
            backend:
              service:
                name: content-service
                port:
                  number: 8082
          - pathType: Prefix
            path: /api/auth/
            backend:
              service:
                name: content-service
                port:
                  number: 8082
